tests/fixtures/validation/e3005_circular_indirect.sysml
// E3005: Indirect circular specialization
package ValidationTest {
    part def A :> B;
    part def B :> C;
    part def C :> A;
}
