tests/fixtures/errors/unexpected_keyword.sysml
package Test {
    part x : A B;
}
